@@ -22,6 +22,7 @@ source-repository head
 library
   exposed-modules:
     Tip.HaskellFrontend
+    Tip.Prelude
     Tip
   other-modules:
     Tip.Params
@@ -37,6 +38,7 @@ library
     Tip.TyAppBeta
     Tip.Uniquify
     Tip.GenericInstances
+  ghc-options:         -fexpose-all-unfoldings
   hs-source-dirs:      src
   include-dirs:        src
   default-language:    Haskell2010
